fixed user feedback UI alignments

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -224,7 +224,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-top: 0.5em;
+      margin-top: 1em;
 
       & .date {
         display: flex;
@@ -252,12 +252,11 @@
         align-items: center;
         padding: 0.5em 1.5em;
         border-radius: 5px;
-        background-color: rgba(0, 0, 0, 0.1);
+
         transition: 0.15s all;
 
         &:hover {
-          // background-color: rgba(0, 0, 0, 0.05);
-          box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.3);
+          box-shadow: inset 0px -5px 2px rgba(0, 0, 0, 0.1);
         }
         &:active {
           box-shadow: none;
@@ -278,9 +277,8 @@
         }
       }
       & .userFeedbackContainer {
-        box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
         padding: 0.5em 1em;
-        border-radius: 10px;
+        border-radius: 5px;
         flex-basis: 1;
         display: flex;
         justify-content: flex-start;
@@ -293,6 +291,7 @@
           justify-content: flex-start;
           align-items: center;
           & span {
+            pointer-events: none;
             font-size: 1em;
             font-weight: 500;
             color: var(--color-dark2);
